# evc-web/src/App.js
@@ -45,8 +45,9 @@ import StockTagPage from 'pages/StockTag/StockTagPage';
 import ReferralGlobalPolicyListPage from 'pages/ReferralGlobalPolicy/ReferralGlobalPolicyListPage';
 import MySubscriptionPage from 'pages/MySubscription/MySubscriptionPage';
 import MySubscriptionHistoryPage from 'pages/MySubscription/MySubscriptionHistoryPage';
-import TranslationListPage from 'pages/Translation/TranslationListPage';
+import ConfigListPage from 'pages/Config/ConfigListPage';
 import EmailTemplateListPage from 'pages/EmailTemplate/EmailTemplateListPage';
+import TranslationListPage from 'pages/Translation/TranslationListPage';
 
 class App extends React.Component {
   constructor(props) {
@@ -126,6 +127,7 @@ class App extends React.Component {
             <RoleRoute visible={isAdmin} loading={loading} exact path="/recurring" component={RecurringListPage} />
             <RoleRoute visible={isAdmin} loading={loading} exact path="/impersonate" component={ImpersonatePage} />
             <RoleRoute visible={isAdmin} loading={loading} exact path="/translation" component={TranslationListPage} />
+            <RoleRoute visible={isAdmin} loading={loading} exact path="/config" component={ConfigListPage} />
             <RoleRoute visible={isAdmin} loading={loading} exact path="/email_template" component={EmailTemplateListPage} />
             <RoleRoute visible={!isGuest} loading={loading} path="/message" exact component={MessagePage} />
             <RoleRoute visible={!isGuest} loading={loading} path="/stock" exact component={StockListPage} />
